# guardspine-local-council

./: .gitignore  LICENSE  README.md  audit-all-repos.py  evidence-test.py  pyproject.toml
.github/workflows/: ci.yml  codeguard.yml
evidence-packs/: audit-summary.json  council-audit-2026-01-31-run2.json  guardspine-adapter-webhook-evidence.json  guardspine-kernel-evidence.json  guardspine-local-council-evidence.json  guardspine-spec-evidence.json  guardspine-verify-evidence.json  n8n-nodes-guardspine-evidence.json  rlm-docsync-evidence.json
examples/: basic_review.py
src/guardspine_local_council/: __init__.py  aggregator.py  council.py  types.py
src/guardspine_local_council/adapters/: pii_wasm_client.py
src/guardspine_local_council/providers/: __init__.py  anthropic.py  hooks.py  mcp_client.py  ollama.py  openai.py  openrouter.py
tests/: test_aggregator.py  test_council.py  test_council_mock.py
