[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "guardspine-local-council"
version = "0.1.0"
description = "Local AI council review using Ollama -- no cloud API keys required"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.24.0",
]

[project.urls]
Homepage = "https://github.com/DNYoussef/guardspine-local-council"
